tests/fixtures/pass/drop_partial_exit.sali
let Resource = struct(value: i32)
let Wrapper = struct(resource: Resource, value: i32)

extend Resource: Drop {
  let drop(mut borrow self)(): () = {
    let trapped = 1 / self.value
  }
}

let escape(): i32 = {
  let wrapper = Wrapper(Resource(0), return 42)
  0
}

let main(): i32 = escape()
